--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Autumn Rodriguez - Web Developer</title>
-        <link rel="stylesheet" href="stylesredo.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/pkb8ymv.css">
     </head>
 
