--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Web Developer, HTML, CSS">
+        <meta name="description" content="A skilled and passionate Web Developer, looking to find her place within an awesome tech company. Let's chat about how we can work together to create some amazing websites."
         <title>Autumn Rodriguez - Web Developer</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/pkb8ymv.css">
